<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ContactsFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                android:id="@+id/txtContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/contacts"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="phone"
                android:text="@string/phone"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="16dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="email"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/txtMap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/place"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="map"
                android:clickable="true"
                android:alpha="0.9"
                android:background="@color/grey"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/navigator_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/maps"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/infobtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Информация"
                android:layout_marginTop="16dp" />

            <Button
                android:id="@+id/logoutbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Выход из аккаунта"
                android:layout_marginTop="16dp" />

        </LinearLayout>

    </FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
